# ros_bridge

./: .gitignore  .zbashrc_cyclonedds.xml  Dockerfile  DockerfileGalactic  Makefile  README.md  bash_utils  cyclonedds.xml  docker-compose.yaml  entrypoint.sh  ros_bridge.env
Docker/: Dockerfile  bash_utils  docker-compose.yaml  entrypoint.sh
docker/: Dockerfile  compose.yaml  entrypoint.sh
ros1_docker/: Dockerfile  docker-compose.yaml
ros1_ws/: custom_dependencies.list
ros1_ws/src/ros1_custom_msgs/: CMakeLists.txt  package.xml
ros1_ws/src/ros1_custom_msgs/scripts/: publisher.py  subscriber.py
ros1_ws/src/tdm_msgs/: CMakeLists.txt  package.xml
ros1_ws/src/tdm_msgs/srv/: ImageToSeg3dPrompt.srv
ros2_ws/: custom_dependencies.list
ros2_ws/src/ros2_custom_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_custom_msgs/msg/: MyMessage.msg
ros2_ws/src/tdm_msgs/: CMakeLists.txt  my_mapping_rules.yaml  package.xml
ros2_ws/src/tdm_msgs/srv/: ImageToSeg3dPrompt.srv
ros_bridge_docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
