<?xml version="1.0"?>
<package format="2">
  <name>ros1_custom_msgs</name>
  <version>0.0.0</version>
  <description>ROS1 Custom Messages</description>
  <maintainer email="nick.chan@utexas.edu">nchan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <!-- Add message dependencies here -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>